# tocadiscos

./: .env.example  .gitignore  LICENSE  README.md  architecture.mermaid  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: agent.py  lastfm_client.py  notifications.py  web_search.py
